--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,7 @@
 	<classpathentry kind="src" output="output/build/shvm-dispatch" path="src-shvm-dispatch"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="output/lib/disl-bypass.jar"/>
-	<classpathentry kind="lib" path="lib/asm-debug-all-5.0.3.jar"/>
+	<classpathentry kind="lib" path="lib/asm-debug-all-5.0.3.jar" sourcepath="/home/pallas/svn/DiiiiSL/disl-trunk/lib/asm-5.0.3-src.zip"/>
 	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
