Initial experimental support for force-loading super classes and interfaces. To enable, use -Ddisl.forcesuperclass=true or -Ddisl.forceinterfaces=true in the client JVM command line.

--- a/src-disl-agent/Makefile
+++ b/src-disl-agent/Makefile
@@ -59,7 +59,8 @@ endif
 
 # Source and object files needed to create the library
 SOURCES = bytecode.c common.c jvmtiutil.c connection.c \
-	connpool.c msgchannel.c network.c dislagent.c
+	connpool.c msgchannel.c network.c classparser.c \
+	dislagent.c
 
 HEADERS = $(wildcard *.h) codeflags.h
 GENSRCS = bytecode.c codeflags.h
