build.xml: download dependencies using the Ivy dependency manager. build.xml: check presence of the required dependency artifacts. build.xml: make JUnit generate test reports. lib: remove included dependencies.

--- a/build.properties
+++ b/build.properties
@@ -1,20 +1,7 @@
 lib.dir=lib
-
-asm.lib=asm-debug-all-5.0.3.jar
-asm.path=${lib.dir}/${asm.lib}
-
-junit.core.lib=junit-4.11.jar
-junit.core.path=${lib.dir}/${junit.core.lib}
-junit.hamcrest.lib=hamcrest-core-1.3.jar
-junit.hamcrest.path=${lib.dir}/${junit.hamcrest.lib}
-
-log4j.lib=log4j-1.2.15.jar
-log4j.path=${lib.dir}/${log4j.lib}
-
-ant-contrib.lib=ant-contrib-0.6.jar
-ant-contrib.resource=net/sf/antcontrib/antlib.xml
-ant-contrib.path=${lib.dir}/${ant-contrib.lib}
-
+lib.ant.dir=${lib.dir}/ant
+lib.disl.dir=${lib.dir}/disl
+lib.test.dir=${lib.dir}/test
 
 src.bin=bin
 src.disl=src-disl
@@ -32,7 +19,7 @@ src.doc.intro=${src.doc}/intro
 src.examples=examples
 
 
-# Based output directory
+# Base output directory
 out.dir=output
 
 
@@ -48,11 +35,19 @@ build.shvm.dispatch=${build.shvm}-dispatch
 build.test=${build.dir}/test
 build.doc.intro=${build.dir}/intro
 
+# Build system libraries
+build.ivy.url = http://central.maven.org/maven2/org/apache/ivy/ivy/${ivy.rev}/ivy-${ivy.rev}.jar
+build.ivy.path = ${lib.ant.dir}/ivy.jar
+build.ivy.file = dependencies.xml
+
+build.artifacts.list = ${lib.dir}/artifacts.lst
+
 
 # Directories for output artifacts
 out.lib=${out.dir}/lib
 out.src=${out.dir}/src
 out.test=${out.dir}/test
+out.junit=${out.dir}/junit
 out.doc.jdoc=${out.dir}/jdoc
 
 
