--- a/.classpath
+++ b/.classpath
@@ -7,9 +7,9 @@
 	<classpathentry kind="src" output="output/build/shvm-dispatch" path="src-shvm-dispatch"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="output/lib/disl-bypass.jar"/>
-	<classpathentry kind="lib" path="lib/asm-debug-all-5.0.3.jar"/>
-	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="lib/disl/asm-debug-all.jar" sourcepath="lib/devel/asm-debug-all-source.jar"/>
+	<classpathentry kind="lib" path="lib/disl/log4j.jar" sourcepath="lib/devel/log4j-source.jar"/>
+	<classpathentry kind="lib" path="lib/test/junit.jar" sourcepath="lib/devel/junit-source.jar"/>
+	<classpathentry kind="lib" path="lib/test/hamcrest-core.jar"/>
 	<classpathentry kind="output" path="output/build/disl"/>
 </classpath>
