--- a/build.xml
+++ b/build.xml
@@ -803,6 +803,7 @@
 					<include name="**/junit/*Test.java"/>
 					<include name="**/disl/*Test.java"/>
 					<include name="**/disl/scope/*Test.java"/>
+					<include name="**/dislreserver/shadow/*Test.java"/>
 				</fileset>
 			</ac:else>
 		</ac:if>
