build.xml: add missing ASM class path to the compile-util target.

--- a/build.xml
+++ b/build.xml
@@ -432,6 +432,7 @@
 	<target name="compile-util" depends="-init">
 		<mkdir dir="${build.util}"/>
 		<javac destdir="${build.util}" srcdir="${src.util}" debug="true">
+			<classpath refid="asm.classpath"/>
 			<classpath refid="log4j.classpath"/>
 		</javac>
 
