Modify build.xml and build.properties to allow proper cleanup of the lib directory.

--- a/build.properties
+++ b/build.properties
@@ -2,6 +2,7 @@ lib.dir=lib
 lib.ant.dir=${lib.dir}/ant
 lib.disl.dir=${lib.dir}/disl
 lib.test.dir=${lib.dir}/test
+lib.devel.dir=${lib.dir}/devel
 
 src.bin=bin
 src.disl=src-disl
