Configure protobuf-lite as a dependency.

--- a/dependencies.properties
+++ b/dependencies.properties
@@ -11,3 +11,7 @@ asm.org=org.ow2.asm
 
 log4j.rev=1.2.17
 log4j.org=log4j
+
+protobuf.rev=3.0.1
+protobuf.org=com.google.protobuf
+protobuf.lib=protobuf-lite
