Update .gitignore to also ignore Windows build directories in src-disl-agent.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Generated dependency files
 src-disl-agent/*.d
 src-disl-agent/linux-*
+src-disl-agent/windows-*
 
 # Compiled shared libraries
 *.so
