Use "javac -h" instead of "javah" to generate header files

--- a/build.properties
+++ b/build.properties
@@ -35,6 +35,7 @@ build.shvm=${build.dir}/shvm
 build.shvm.dispatch=${build.shvm}-dispatch
 build.test=${build.dir}/test
 build.doc.intro=${build.dir}/intro
+build.disl.native=${build.dir}/native
 
 # Build system libraries
 build.ivy.url = http://central.maven.org/maven2/org/apache/ivy/ivy/${ivy.rev}/ivy-${ivy.rev}.jar
