--- a/dependencies.properties
+++ b/dependencies.properties
@@ -12,6 +12,6 @@ asm.org=org.ow2.asm
 log4j.rev=1.2.17
 log4j.org=log4j
 
-protobuf.rev=3.0.1
+protobuf.rev=3.11.0
 protobuf.org=com.google.protobuf
-protobuf.lib=protobuf-lite
+protobuf.lib=protobuf-javalite
