Ivy download link updated

--- a/build.properties
+++ b/build.properties
@@ -38,7 +38,7 @@ build.doc.intro=${build.dir}/intro
 build.disl.native=${build.dir}/native
 
 # Build system libraries
-build.ivy.url = http://central.maven.org/maven2/org/apache/ivy/ivy/${ivy.rev}/ivy-${ivy.rev}.jar
+build.ivy.url = https://repo1.maven.org/maven2/org/apache/ivy/ivy/${ivy.rev}/ivy-${ivy.rev}.jar
 build.ivy.path = ${lib.ant.dir}/ivy.jar
 build.ivy.file = dependencies.xml
 
